2003-03-03  Will Cohen  <wcohen@redhat.com>

	* gui/oprof_start.cpp (oprof_start::on_start_profiler): Limit
	  check to onlyl utm_bitmask.
I
2003-03-03  Will Cohen  <wcohen@redhat.com>

    * events/ia64.itanium2.events:
    * events/ia64.itanium2.unit_masks: Add Itanium 2 events.

2003-03-03  Will Cohen  <wcohen@redhat.com>

    * libop/op_events.h:
    * libop/op_events.c: Correct checking for the number of unit
      masks.

2003-03-03  John Levon  <levon@movementarian.org>

	* doc/oprofile.1.in:
	* doc/oprofile.xml: another round of cleanups

	* pp/op_merge.cpp: --counter not --use-counter,
	  for consistency

2003-03-03  John Levon  <levon@movementarian.org>

	Patch from Chris Moller, modified.

	* dae/opd_proc.c:
	* dae/opd_sample_files.c:
	* daemon/opd_image.c:
	* daemon/opd_sample_files.c:
	* libabi/abi_test.cpp:
	* libabi/op_import.cpp:
	* libdb/db_hash.h:
	* libdb/db_insert.c:
	* libdb/db_manage.c:
	* libdb/db_test.c:
	* pp/counter_profile.cpp:
	* pp/op_merge.cpp: push asserts in libdb down into
	  the clients.

2003-03-03  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml:
	* doc/oprofile.1.in:
	* utils/opcontrol: add --separate=none, --pid/pgrp-filter=non

2003-03-03  John Levon  <levon@movementarian.org>

	* configure.in:
	* doc/Makefile.am:
	* doc/oprofile.xml:
	* doc/xsl/xhtml-chunk.xsl.in:
	* doc/xsl/xhtml.xsl.in:
	* doc/xsl/xhtml-common.xsl: Add version to the
	  docs. Some doc cleanups

2003-03-02  John Levon  <levon@movementarian.org>

	* utils/opcontrol: --separate=library should turn kernel off

2003-03-02  John Levon  <levon@movementarian.org>

	* events/Makefile.am: fix uninstall

2003-03-02  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml: more re-workings prodded by aeb

2003-03-02  John Levon  <levon@movementarian.org>

	* daemon/opd_kernel.c: remove /proc/ksyms reading

2003-03-02  John Levon  <levon@movementarian.org>

	* libutil/op_fileio.c: change op_get_line to return