@@ -7,6 +7,7 @@ Before 1.0 big stuff
 --------------------
 
  o implement new pp spec (see specification)
+ 	o opcontrol should sort out the counter numbers for the user
 	o thread profiling - kernel change in 2.5 to export task->tgid
 	o per-cpu profiling
 	o difference between two profile session. Difference must be made at source level. 
@@ -23,7 +24,6 @@ Before 1.0 little stuff
  o --smart-demangle is not documented
  o Add something  to op_help so user can see if they're using timer/rtc mode or not
  o oprof_start should use the same config file as opcontrol ...
- o opcontrol -- need a way to turn OFF a counter now after setting one up
  o oprofpp needs -P too
  o "op_time" doesn't have a header !
  o document that even with the in_interrupt trick in 2.5, you can still get a few
